--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+=== 1.3.0 2014-07-30
+
+*** CAUTION: THIS VERSION HAS UPDATED METHODS THAT MAKE PREVIOUS FUNCTION CALLS OBSOLETE ***
+* Added personalized streams and timeline support.
+* Updated some calls to use SSL.
+* Refactored classes to match other libraries.
+* Updated createCollectionMeta() to accept a map of optional params instead of tag/type.
+* Updated checksum formula.
+
 === 1.1.4 2014-05-07
 
 * Added rating, counting as acceptable types.
