--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.3.1 2014-08-11
+
+* Added option to toggle SSL for API calls.
+
 === 1.3.0 2014-07-30
 
 *** CAUTION: THIS VERSION HAS UPDATED METHODS THAT MAKE PREVIOUS FUNCTION CALLS OBSOLETE ***
