--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 1.3.2 2014-08-11
+
+* Added rest of API calls to SSL toggle.
+* Changed method signatures to old method of having callbacks at the end of the function.
+* Updated error handling based on feedback.
+
 === 1.3.1 2014-08-11
 
 * Added option to toggle SSL for API calls.
