--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
 * Added rest of API calls to SSL toggle.
 * Changed method signatures to old method of having callbacks at the end of the function.
 * Updated error handling based on feedback.
+* Added requirements to have fyre.co at end of network name.
+* Made user auth check allow dash, underscore, and dots.
 
 === 1.3.1 2014-08-11
 
