--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.3 2015-09-29
+
+* Typo in error message on collection validation.
+
 === 2.0.2 2015-05-12
 
 * Changed JWT library to one that is approved in jwt.io.
