--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.4 2016-02-04
+
+* Updated token generation to include noTimestamp for caching reasons.
+
 === 2.0.3 2015-09-29
 
 * Typo in error message on collection validation.
